[tool.poetry]
name = "aula 2 - como automatizar tarefas no python"
version = "0.1.0"
description = ""
authors = ["Felipe Santos <fcsantos.ap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.50"
matplotlib = "^3.9.3"
pyautogui = "^0.9.54"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
